# exercism-coding-odyssey

./: .gitignore
python/: pyproject.toml
python/chaitanas-colossal-coaster/: list_methods.py
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: README.md
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/making-the-grade/: loops.py
python/meltdown-mitigation/: .gitignore  conditionals.py
solutions/go/cars-assemble/1/: cars_assemble.go
solutions/go/lasagna/1/: lasagna.go
solutions/go/weather-forecast/1/: weather_forecast.go
solutions/javascript/annalyns-infiltration/1/: annalyns-infiltration.js
solutions/javascript/lasagna/1/: lasagna.js
solutions/javascript/lasagna/2/: lasagna.js
solutions/python/black-jack/1/: black_jack.py
solutions/python/card-games/1/: lists.py
solutions/python/chaitanas-colossal-coaster/1/: list_methods.py
solutions/python/currency-exchange/1/: exchange.py
solutions/python/currency-exchange/2/: exchange.py
solutions/python/currency-exchange/3/: exchange.py
solutions/python/guidos-gorgeous-lasagna/1/: lasagna.py
solutions/python/guidos-gorgeous-lasagna/2/: lasagna.py
solutions/python/guidos-gorgeous-lasagna/3/: lasagna.py
solutions/python/inventory-management/1/: dicts.py
solutions/python/inventory-management/2/: dicts.py
solutions/python/inventory-management/3/: dicts.py
solutions/python/little-sisters-vocab/1/: strings.py
solutions/python/little-sisters-vocab/2/: strings.py
solutions/python/making-the-grade/1/: loops.py
(+19 files in other folders)
