[tool.poetry]
name = "exercism-python"
version = "0.1.0"
description = "Exercism's Python exercises"
authors = ["Ulises Alexander AM <ulises_alexander_am@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
